--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "postinstall": "husky install",
-    "prettier:all": "prettier --write **/*.{js,ts,tsx,vue} --ignore-unknown"
+    "prettier:all": "prettier --write **/*.{js,ts,tsx,vue} --ignore-unknown",
+    "commit": "cz-customizable"
   },
   "name": "ddu-du-ddu-du",
   "packageManager": "yarn@3.3.0",
@@ -10,6 +11,7 @@
     "@commitlint/config-conventional": "^17.3.0",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^7.0.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
     "prettier": "^2.8.0"
@@ -21,7 +23,12 @@
   },
   "config": {
     "commitizen": {
-      "path": "cz-conventional-changelog"
+      "path": "cz-customizable"
+    }
+  },
+  "dependenciesMeta": {
+    "commitizen@4.2.5": {
+      "unplugged": true
     }
   }
 }
