--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "commitizen": "^4.2.5",
-    "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
@@ -27,7 +26,7 @@
     }
   },
   "dependenciesMeta": {
-    "commitizen@4.2.5": {
+    "cz-customizable@7.0.0": {
       "unplugged": true
     }
   }
