--- a/react/18-rxjs/package.json
+++ b/react/18-rxjs/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "rxjs": "^7.5.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "prettier": "^2.8.0",
-    "rxjs": "^7.5.7",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
