--- a/next/13-jotai-react-query/package.json
+++ b/next/13-jotai-react-query/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.11.11",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
     "jotai": "^1.11.1",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.3"
+  },
+  "packageManager": "yarn@3.3.0",
+  "devDependencies": {
+    "@types/node": "18.11.11",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "@types/styled-components": "^5.1.26",
+    "eslint": "^8.29.0",
+    "eslint-config-next": "13.0.6"
   }
 }
