--- a/next/13-jotai-react-query/package.json
+++ b/next/13-jotai-react-query/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "18.0.9",
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.29.0",
-    "eslint-config-next": "13.0.6"
+    "eslint-config-next": "13.0.6",
+    "prettier": "^2.8.1"
   }
 }
