--- a/next/13-jotai-react-query/package.json
+++ b/next/13-jotai-react-query/package.json
@@ -25,6 +25,7 @@
     "@types/styled-components": "^5.1.26",
     "eslint": "^8.29.0",
     "eslint-config-next": "13.0.6",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "react-icons": "^4.7.1"
   }
 }
