feat(component): add WritePage, Input, global input state management

--- a/next/13-jotai-react-query/.vscode/settings.json
+++ b/next/13-jotai-react-query/.vscode/settings.json
@@ -5,6 +5,6 @@
   },
   "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
   "eslint.nodePath": ".yarn/sdks",
-  "typescript.tsdk": ".yarn/cache/typescript-patch-b9b216bc0d-67ca21a387.zip/node_modules/typescript/lib",
+  "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true
 }
