--- a/next/13-jotai-react-query/package.json
+++ b/next/13-jotai-react-query/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.6",
     "jotai": "^1.11.1",
     "next": "13.0.6",
     "react": "18.2.0",
