--- a/next/13-silent-refresh/package.json
+++ b/next/13-silent-refresh/package.json
@@ -17,8 +17,11 @@
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-dom": "18.2.0"
   },
-  "packageManager": "yarn@3.3.1"
+  "packageManager": "yarn@3.3.1",
+  "devDependencies": {
+    "prettier": "^2.8.3",
+    "typescript": "4.9.3"
+  }
 }
