--- a/next/13-indexeddb/package.json
+++ b/next/13-indexeddb/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "idb": "^7.1.1",
+    "next": "13.1.6",
+    "react": "^18.2.0",
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.0"
+  },
+  "packageManager": "yarn@3.3.0",
+  "devDependencies": {
     "@types/node": "18.11.19",
-    "@types/react": "18.0.27",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/uuid": "^9.0.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
-  },
-  "packageManager": "yarn@3.4.1"
+    "prettier": "^2.8.3",
+    "typescript": "4.9.3"
+  }
 }
