--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev:vanilla-js": "yarn workspace vanilla-js dev",
     "dev:react-18-rxjs": "yarn workspace react-18-rxjs dev",
     "dev:next13-silent-refresh": "yarn workspace next-silent-refresh dev",
-    "dev:next13-indexedDB": "yarn workspace next13-indexeddb dev"
+    "dev:next13-indexedDB": "yarn workspace next13-indexeddb dev",
+    "dev:tdd-playwright": "yarn workspace 13-tdd-playwright dev"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
