--- a/next/10/antd/4/package.json
+++ b/next/10/antd/4/package.json
@@ -7,12 +7,22 @@
   "dependencies": {
     "antd": "4.18.8",
     "framer-motion": "6.5.1",
+    "less": "4.1.2",
+    "less-loader": "7.3.0",
     "moment": "2.29.1",
     "next": "10.2.3",
     "next-plugin-antd-less": "1.8.0",
+    "null-loader": "^4.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "5.3.3",
     "styled-reset": "4.3.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "babel-plugin-import": "^1.13.6",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-styled-components": "^2.1.1"
   }
 }
