--- a/next/10/antd/4/package.json
+++ b/next/10/antd/4/package.json
@@ -15,6 +15,7 @@
     "null-loader": "^4.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-is": "^18.2.0",
     "styled-components": "5.3.3",
     "styled-reset": "4.3.4"
   },
