feat(component): create Card

--- a/next/10/antd/4/package.json
+++ b/next/10/antd/4/package.json
@@ -2,7 +2,8 @@
   "name": "next10-antd4",
   "packageManager": "yarn@3.5.0",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build"
   },
   "dependencies": {
     "antd": "4.18.8",
