--- a/next/10/antd/4/package.json
+++ b/next/10/antd/4/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "^18.2.0",
+    "sass": "^1.62.1",
     "styled-components": "5.3.3",
     "styled-reset": "4.3.4"
   },
