--- a/next/13-ts-guide/package.json
+++ b/next/13-ts-guide/package.json
@@ -21,5 +21,9 @@
     "styled-components": "^6.0.0-rc.5",
     "typescript": "5.1.3"
   },
-  "packageManager": "yarn@3.6.0"
+  "packageManager": "yarn@3.6.0",
+  "devDependencies": {
+    "@types/uuid": "^9.0.2",
+    "uuid": "^9.0.0"
+  }
 }
