--- a/next/13-draggable/package.json
+++ b/next/13-draggable/package.json
@@ -22,6 +22,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^8.9.0",
     "prettier": "^3.0.0"
   }
 }
