--- a/next/13-draggable/package.json
+++ b/next/13-draggable/package.json
@@ -25,9 +25,13 @@
   "devDependencies": {
     "@swc/core": "^1.3.72",
     "@swc/jest": "^0.2.27",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
     "eslint-config-prettier": "^8.9.0",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "jest-extended": "^4.0.0",
     "prettier": "^3.0.0"
   }
