--- a/next/13-draggable/package.json
+++ b/next/13-draggable/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "@types/styled-components": "^5.1.26",
+    "encoding": "^0.1.13",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
@@ -33,6 +34,9 @@
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "jest-extended": "^4.0.0",
-    "prettier": "^3.0.0"
-  }
+    "msw": "^1.2.3",
+    "prettier": "^3.0.0",
+    "supports-color": "^9.4.0"
+  },
+  "packageManager": "yarn@3.6.1"
 }
