--- a/next/13-draggable/package.json
+++ b/next/13-draggable/package.json
@@ -38,5 +38,8 @@
     "prettier": "^3.0.0",
     "supports-color": "^9.4.0"
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@3.6.1",
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
