--- a/next/13-draggable/package.json
+++ b/next/13-draggable/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@types/node": "20.4.5",
@@ -30,6 +31,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.3",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "eslint-config-prettier": "^8.9.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
