--- a/next/13-draggable/package.json
+++ b/next/13-draggable/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@swc/core": "^1.3.72",
     "@swc/jest": "^0.2.27",
+    "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
