--- a/next/13-draggable/package.json
+++ b/next/13-draggable/package.json
@@ -39,6 +39,7 @@
     "jest-environment-jsdom": "^29.6.2",
     "jest-extended": "^4.0.0",
     "msw": "^1.2.3",
+    "next-router-mock": "^0.9.7",
     "prettier": "^3.0.0",
     "supports-color": "^9.4.0"
   },
